# ByteBot-vision

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/vision_controller/lib/vision_controller/: get_image_from_oakd
install/vision_controller/share/vision_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list  latest_test
src/vision_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vision_controller/launch/: vision_controller.launch.py
src/vision_controller/scripts/: change_state_node.py  detect_body_node.py  detect_colour_node.py  detect_hand_gestures_im_raw_node.py  follow_legs_node.py  follow_person_node.py  get_images_from_oakd_node.py
src/vision_controller/vision_controller/: detect_colour.py  follow_person.py  get_image_from_oakd.py  get_images_from_oakd.py
src/vision_controller/vision_controller/nodes/: change_state.py  detect_body_im_raw.py  detect_colour.py  detect_hand_gestures_im_raw.py  follow_legs.py  follow_person.py  get_images_from_oakd.py
src/vision_controller/vision_controller/state/: state.json
src/vision_controller/vision_controller/tmp_img/: tmp.txt
